welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:8: error: type mismatch;
 found   : Unit
 required: Boolean
  for(j<- 0 to 5){recule()}
       ^